src/objects/loan__Charge__c.object
<CustomObject>
    <description>Charge is something that is applied.</description>
    <fields>
        <fullName>loan__Accrue_Interest_From__c</fullName>
        <inlineHelpText>This is the date from which the interest on the charge will be calculated. If this is not mentioned interest will be calculated from the date the charge was incurred.</inlineHelpText>
        <label>Accrue Interest From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Calculated_Interest2__c</fullName>
        <formula>(loan__Original_Amount__c - loan__Paid_Amount__c) * ( loan__Interest_Rate__c ) *  ($User.loan__Current_Branch_s_System_Date__c -  loan__Accrue_Interest_From__c ) / (365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Interest (Formula)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Calculated_Interest3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>View only field which shows the calculated interest from last accrual date from SOD process.</description>
        <label>Calculated Interest</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charge_Type__c</fullName>
        <label>Charge Type_deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>Late Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Off Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <inlineHelpText>This is the date the charge was incurred.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Dues_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dues Details</label>
        <referenceTo>loan__Loan_account_Due_Details__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The associated Fee. The Fee object is used in case of automatic application of a charge. For example, the late fees is charged automatically on a loan.</inlineHelpText>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if the charge is interest bearing.</inlineHelpText>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest due after a payment(txn amount insufficient to clear complete interest) on interest bearing charges</description>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <inlineHelpText>This is the interest rate to be applied on the charge (if applicable)</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on charge (Usually the last payment transaction date)</description>
        <inlineHelpText>The date when the last interest accrual was processed</inlineHelpText>
        <label>Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <inlineHelpText>The associated loan.</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Original_Amount__c</fullName>
        <inlineHelpText>The original amount of the charge.</inlineHelpText>
        <label>Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>The amount that has been paid.</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal amount of charge that is yet to be paid.</description>
        <label>Principal Due</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <inlineHelpText>This text can be used to provide additional information about the charge.</inlineHelpText>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Total_Due_Amount__c</fullName>
        <formula>loan__Principal_Due__c + loan__Interest_Due__c + loan__Calculated_Interest3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Waived_Amount__c</fullName>
        <formula>loan__Waived_Principal__c +  loan__Waived_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Waived Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this charge must be waived off.</inlineHelpText>
        <label>Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Waived_Interest__c</fullName>
        <label>Waived Interest</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Waived_Principal__c</fullName>
        <label>Waived Principal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__VAT_percent__c</fullName>
        <label>VAT %age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Charge</label>
    <nameField>
        <displayFormat>CHG-{00000000}</displayFormat>
        <label>Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Accrue_Interest_From_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Interest_Bearing__c = true &amp;&amp;
 ISBLANK(loan__Accrue_Interest_From__c)</errorConditionFormula>
        <errorMessage>For an interest bearing charge, please enter the accrue interest from date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Loan_Status</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , &apos;Active - Good Standing&apos;) ) &amp;&amp;
NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , &apos;Active - Bad Standing&apos;) ) &amp;&amp;
NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , &apos;Active - Matured&apos;) )</errorConditionFormula>
        <errorMessage>Charges can only be applied to active loans.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Edit_Paid_Charge_Check</fullName>
        <active>true</active>
        <description>Charges that have a payment against them cannot be waived</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; loan__Paid__c  = true  &amp;&amp;  
NOT(ISCHANGED(loan__Paid__c)) &amp;&amp; 
(ISCHANGED(loan__Original_Amount__c) || ISCHANGED(loan__Paid_Amount__c) || ISCHANGED(loan__Reference__c) || ISCHANGED(loan__Interest_Bearing__c) || ISCHANGED(loan__Principal_Due__c ) || ISCHANGED(loan__Interest_Due__c ) || ISCHANGED(loan__Fee__c) || ISCHANGED(loan__Interest_Rate__c) || ISCHANGED( loan__Accrue_Interest_From__c ))</errorConditionFormula>
        <errorMessage>You cannot edit a paid charge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Waive_Paid_Charges</fullName>
        <active>true</active>
        <description>Charges that have a payment against them cannot be waived</description>
        <errorConditionFormula>loan__Waive__c  = true  &amp;&amp; loan__Paid_Amount__c  &lt;&gt; 0</errorConditionFormula>
        <errorMessage>Charge cannot be waived as there is a payment made against it already</errorMessage>
    </validationRules>
</CustomObject>